--- a/App/styles.css
+++ b/App/styles.css
@@ -26,7 +26,7 @@ input:focus, input:hover {
   border: 1px solid #f3953c;
 }
 
-.btn-scan-profile {
+.btn-scrap-profile {
   background-color: #f3953c;
   height: 30px;
   width: 50%;
